[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/HUDTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Misc/Options.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Misc/UIConfirmShortcut.tres" type="ShortCut" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Options" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -102.0
margin_right = 176.0
margin_bottom = 152.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
custom_constants/separation = 6

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
margin_right = 301.0
margin_bottom = 41.0
custom_styles/normal = SubResource( 2 )
text = "Options
"
align = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 47.0
margin_right = 301.0
margin_bottom = 66.0
custom_styles/normal = SubResource( 1 )
text = "Master volume:"

[node name="Master" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 301.0
margin_bottom = 88.0
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_top = 94.0
margin_right = 301.0
margin_bottom = 113.0
custom_styles/normal = SubResource( 1 )
text = "Music volume:"

[node name="Music" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 119.0
margin_right = 301.0
margin_bottom = 135.0
tick_count = 5
ticks_on_borders = true

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 141.0
margin_right = 301.0
margin_bottom = 160.0
custom_styles/normal = SubResource( 1 )
text = "Sound effect volume:"

[node name="SFX" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 166.0
margin_right = 301.0
margin_bottom = 182.0
tick_count = 5
ticks_on_borders = true

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 188.0
margin_right = 301.0
margin_bottom = 215.0
shortcut = ExtResource( 3 )
text = "Return"

[connection signal="about_to_show" from="." to="." method="_on_Options_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_Options_popup_hide"]
[connection signal="value_changed" from="Panel/VBoxContainer/Master" to="." method="_on_value_changed" binds= [ "Master" ]]
[connection signal="value_changed" from="Panel/VBoxContainer/Music" to="." method="_on_value_changed" binds= [ "Music" ]]
[connection signal="value_changed" from="Panel/VBoxContainer/SFX" to="." method="_on_value_changed" binds= [ "SFX" ]]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
